// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > Link > should add the locale to the \`href\` if it is not already present 1`] = `
<a
  href="/undefined/some/path"
/>
`;

exports[`components > Link > should handle \`href\` using \`tel:\`, \`mailto:\`, etc protocols 1`] = `
<a
  href="mailto:hi@nordcom.io"
/>
`;

exports[`components > Link > should not add the locale to the \`href\` if it is already present 1`] = `
<a
  href="/sv-SE/some/path"
/>
`;

exports[`components > Link > should remove double slashes from the \`href\` 1`] = `
<a
  href="/en-US/some/path"
/>
`;

exports[`components > Link > should remove the current domain from the \`href\` 1`] = `
<a
  href="/en-US/some/path"
  shop="[object Object]"
/>
`;
